<resources>
    <string name="app_name">SportEventsApp</string>
    <string name="create_event">Create New Event</string>
    <string name="view_event">View event</string>
    <string name="update_event">Update event</string>
    <string name="remove_event">Remove event</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="default_name">Sport0</string>
    <string name="default_location">Location0</string>
    <string name="default_start_time">08:30</string>
    <string name="default_end_time">09:15</string>
    <string name="default_description">Description0</string>

    <string name="no_events">No events</string>
</resources>
